# ramanujan-harness

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: custom_family_template.py  find_dirichlet_L_values.py  rediscover_apery.py
hits/: central-binomial-power_zeta3_1_3_1_0_0.json  central-binomial-power_zeta4_0_4_1_0_0.json
ramanujan/: __init__.py  cli.py  constants.py  generators.py  multi.py  pslq.py  search.py  verify.py
tests/: test_constants.py  test_generators.py  test_pslq.py  test_rediscovery.py  test_search.py
