[project]
name = "ramanujan-harness"
version = "0.1.0"
description = "Ramanujan-Machine-style identity hunter: parameterized generators + PSLQ + symbolic verification"
requires-python = ">=3.11"
dependencies = [
    "mpmath>=1.3.0",
    "sympy>=1.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
ramanujan = "ramanujan.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ramanujan"]
